cmake_minimum_required(VERSION 2.8)

project(Euler)
#set(CMAKE_CXX_FLAGS "-g -Wall")
set(CMAKE_CXX_FLAGS "-g")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${Euler_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Euler_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Euler_SOURCE_DIR}/bin)

# To-do List
#add_subdirectory(20)
#add_subdirectory(25)
#add_subdirectory(107)

# Done and doings
add_subdirectory(libmath)
#add_subdirectory(1)
#add_subdirectory(2)
#add_subdirectory(7)
#add_subdirectory(8)
#add_subdirectory(21)
#add_subdirectory(23)
#add_subdirectory(40)
#add_subdirectory(41)
#add_subdirectory(46)
#add_subdirectory(50)
#add_subdirectory(85)
#add_subdirectory(99)
#add_subdirectory(81)
#add_subdirectory(37)
#add_subdirectory(53)
#add_subdirectory(83)
#add_subdirectory(187)
#add_subdirectory(31)
add_subdirectory(13)
